--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.10.5</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 0.10.5.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -449,7 +449,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.9.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 0.9.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -461,7 +461,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.8.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 0.8.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -473,7 +473,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.7.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 0.7.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -485,7 +485,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.6.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 0.6.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -497,7 +497,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.5.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 0.5.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
