--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.20.60.04</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.20.60.04.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.20.50.03</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.20.50.03.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.20.51.01</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.20.51.01.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.20.41.02</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.20.41.02.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.20.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.20.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -125,7 +125,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.19.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.19.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -137,7 +137,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.18.0.20</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.18.0.20.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.18.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.18.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -161,7 +161,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.17.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.17.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -173,7 +173,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.16.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.16.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.15.0.54</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.15.0.54.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.14.20</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.14.20.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -209,7 +209,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.14.1</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.14.1.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -221,7 +221,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.14.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.14.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -233,7 +233,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.13.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.13.0" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -245,7 +245,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.12.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.12.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -257,7 +257,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.11.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.11.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -269,7 +269,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.10.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.10.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -281,7 +281,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.9.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.9.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -293,7 +293,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.8.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.8.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -305,7 +305,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.6.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.6.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -317,7 +317,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.5.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.5.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -329,7 +329,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.4.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.4.0" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -341,7 +341,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.2.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.2.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -353,7 +353,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.1.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.1.0" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -365,7 +365,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.0.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 1.0.0" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -377,7 +377,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.16.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 0.16.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -389,7 +389,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.14.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 0.14.0" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -401,7 +401,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.13.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 0.13.0" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -413,7 +413,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.12.3</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 0.12.3" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -425,7 +425,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.11.0</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="Minecraft 0.11.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
