--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.12.3</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.12.3" class="more-details">Download</a>
+                        <a href="Minecraft 0.12.3.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
