--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.0.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.0.0" class="more-details">Download</a>
+                        <a href="Minecraft 1.0.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -390,7 +390,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.14.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.14.0" class="more-details">Download</a>
+                        <a href="Minecraft 0.14.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -402,7 +402,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.13.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.13.0" class="more-details">Download</a>
+                        <a href="Minecraft 0.13.0.apk" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
