--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.20.60.04</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.20.60.04.apk" class="more-details">Download</a>
+                        <a href="https://www.mediafire.com/file/aan7vbnojsu72g6/Minecraft-1-20-60-Official-By-GamerBoyVizag.apk/file" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
