--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.20.50.03</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.20.50.03.apk" class="more-details">Download</a>
+                        <a href="https://www.mediafire.com/file/1nqwpvenhmr1l4y/Minecraft_1.20.50.03.zip/file" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -90,7 +90,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.20.51.01</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.20.51.01.apk" class="more-details">Download</a>
+                        <a href="https://www.mediafire.com/file/a0goppxcrcb810j/Minecraft_1.20.51.01.zip/file" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.20.41.02</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.20.41.02.apk" class="more-details">Download</a>
+                        <a href="https://www.mediafire.com/file/5y0mnzu123nwsvt/Minecraft_1.20.41.02.zip/file" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -114,7 +114,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.20.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.20.0.apk" class="more-details">Download</a>
+                        <a href="https://mcpe-planet.com/downloads/minecraft-pe-1-20/1-20-0/" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.19.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.19.0.apk" class="more-details">Download</a>
+                        <a href="https://mcpe-planet.com/downloads/minecraft-pe-1-19/1-19-0/" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
