--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.18.0.20</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.18.0.20.apk" class="more-details">Download</a>
+                        <a href="https://mcpe-planet.com/downloads/minecraft-pe-1-18/1-18-0-20/" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.18.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.18.0.apk" class="more-details">Download</a>
+                        <a href="https://mcpe-planet.com/downloads/minecraft-pe-1-18/1-18-0/" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.17.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.17.0.apk" class="more-details">Download</a>
+                        <a href="https://mcpe-planet.com/downloads/minecraft-pe-1-17/1-17-0/" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -174,7 +174,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.16.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.16.0.apk" class="more-details">Download</a>
+                        <a href="https://mcpe-planet.com/downloads/minecraft-pe-1-16/1-16-0/" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -186,8 +186,8 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.15.0.54</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.15.0.54.apk" class="more-details">Download</a>
-                    </strong>
+                        <a href="https://m.apkmodhere.com/minecraft/com.mojang.minecraftpe/download?version=1.15.0.54&type=free" class="more-details">Pro page transition</a>
+                  </strong>
                 </div>
             </div>
             <div class="content">
@@ -198,11 +198,17 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.14.20</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.14.20.apk" class="more-details">Download</a>
+                        <a href="" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
+
             <div class="content">
+            <div class="project-card">
+                </strong>
+                </div>
+            </div>
+ <div class="content">
             <div class="project-card">
                 <div class="project-image">
                     <img src="Minecraft.jpg" />
@@ -210,25 +216,10 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.14.1</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.14.1.apk" class="more-details">Download</a>
+                        <a href="" class="more-details">Download</a>
                     </strong>
                 </div>
-            </div>
-            <div class="content">
-            <div class="project-card">
-                <div class="project-image">
-                    <img src="Minecraft.jpg" />
-                </div>
-                <div class="project-info">
-                    <h3 class="project-category">Minecraft 1.14.0</h3>
-                    <strong class="project-title">
-                        <a href="Minecraft 1.14.0.apk" class="more-details">Download</a>
-                    </strong>
-                </div>
-            </div>
-            <div class="content">
-            <div class="project-card">
-                <div class="project-image">
+            </div> class="project-image">
                     <img src="Minecraft.jpg" />
                 </div>
                 <div class="project-info">
