--- a/index.html
+++ b/index.html
@@ -208,18 +208,23 @@
                 </strong>
                 </div>
             </div>
- <div class="content">
-            <div class="project-card">
-                <div class="project-image">
+class="project-image">
                     <img src="Minecraft.jpg" />
                 </div>
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.14.1</h3>
                     <strong class="project-title">
-                        <a href="" class="more-details">Download</a>
+                        <a href="https://mcpe-planet.com/downloads/minecraft-pe-1-14/1-14-1/" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
-            </div> class="project-image">
+            </div>
+
+            <div class="content">
+            <div class="project-card">
+                </strong>
+                </div>
+            </div>
+ class="project-image">
                     <img src="Minecraft.jpg" />
                 </div>
                 <div class="project-info">
