--- a/index.html
+++ b/index.html
@@ -198,6 +198,24 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.14.20</h3>
                     <strong class="project-title">
+                        <a href="https://mcpe-planet.com/downloads/minecraft-pe-1-14/1-14-0/" class="more-details">Pro page transition</a>
+                    </strong>
+                </div>
+            </div>
+
+            <div class="content">
+            <div class="project-card">
+                </strong>
+                </div>
+            </div>
+<div class="content">
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="Minecraft.jpg" />
+                </div>
+                <div class="project-info">
+                    <h3 class="project-category">Minecraft 1.14.1</h3>
+                    <strong class="project-title">
                         <a href="" class="more-details">Download</a>
                     </strong>
                 </div>
@@ -208,29 +226,15 @@
                 </strong>
                 </div>
             </div>
-class="project-image">
-                    <img src="Minecraft.jpg" />
-                </div>
-                <div class="project-info">
-                    <h3 class="project-category">Minecraft 1.14.1</h3>
-                    <strong class="project-title">
-                        <a href="https://mcpe-planet.com/downloads/minecraft-pe-1-14/1-14-1/" class="more-details">Pro page transition</a>
-                    </strong>
-                </div>
-            </div>
-
-            <div class="content">
+ <div class="content">
             <div class="project-card">
-                </strong>
-                </div>
-            </div>
- class="project-image">
+                <div class="project-image">
                     <img src="Minecraft.jpg" />
                 </div>
                 <div class="project-info">
-                    <h3 class="project-category">Minecraft 1.13.0</h3>
+                    <h3 class="project-category">Minecraft 1.14.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.13.0" class="more-details">Download</a>
+                        <a href="" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -242,7 +246,7 @@ class="project-image">
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.12.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 1.12.0.apk" class="more-details">Download</a>
+                        <a href="https://mcpe-planet.com/downloads/minecraft-pe-1-12/1-12-0/" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
