--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="lol.icon">
     <link rel="stylesheet" href="style.css">
-    <title>Minecraft Version</title>
+    <title>Minecraft All Version</title>
 </head>
 <body>
 	<body bgcolor="#4F02B5">
