--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="lol.icon">
     <link rel="stylesheet" href="style.css">
+ <meta/ Minecraft All Version>
     <title>Minecraft All Version</title>
 </head>
 <body>
