--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.14.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.14.0.apk" class="more-details">Download</a>
+                        <a href="tps://apknode.com/app/com.mojang.minecraftpe/0.14.0_paid.html" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -402,7 +402,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.13.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.13.0.apk" class="more-details">Download</a>
+                        <a href="https://apknode.com/app/com.mojang.minecraftpe/0.13.0_paid.html" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -414,7 +414,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.12.3</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.12.3.apk" class="more-details">Download</a>
+                        <a href="https://apknode.com/app/com.mojang.minecraftpe/0.12.3_paid.html" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -426,7 +426,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.11.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.11.0.apk" class="more-details">Download</a>
+                        <a href="https://apknode.com/app/com.mojang.minecraftpe/0.11.0_paid.html" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -438,7 +438,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.10.5</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.10.5.apk" class="more-details">Download</a>
+                        <a href="https://apknode.com/app/com.mojang.minecraftpe/0.10.5_paid.html" class="more-details">Download</a>
                     </strong>
                 </div>
             </div>
@@ -450,7 +450,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.9.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.9.0.apk" class="more-details">Download</a>
+                        <a href="https://apknode.com/app/com.mojang.minecraftpe/0.9.0_paid.html" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -462,7 +462,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.8.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.8.0" class="more-details">Download</a>
+                        <a href="https://apknode.com/app/com.mojang.minecraftpe/0.8.0_paid.html" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -474,7 +474,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.7.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.7.0.apk" class="more-details">Download</a>
+                        <a href="https://apknode.com/app/com.mojang.minecraftpe/0.7.0_paid.html" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -486,7 +486,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.6.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.6.0.apk" class="more-details">Download</a>
+                        <a href="https://apknode.com/app/com.mojang.minecraftpe/0.6.0_paid.html" class="more-details"Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -498,7 +498,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.5.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft 0.5.0.apk " class="more-details">Download</a>
+                        <a href="https://apknode.com/app/com.mojang.minecraftpe/0.5.0_paid.html" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -510,7 +510,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.4.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft PE 0.4.0.apk" class="more-details">Download</a>
+                        <a href="https://www.mediafire.com/file/n1vbmo8ycvx0oo0/Minecraft_0.4.0.zip/file" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -522,7 +522,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.3.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft PE 0.3.0.apk" class="more-details">Download</a>
+                        <a href="https://www.mediafire.com/file/7evtvhs9hzx7hwb/Minecraft_0.3.0.zip/file" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -534,7 +534,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.2.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft PE 0.2.0.apk" class="more-details">Download</a>
+                        <a href="tps://www.mediafire.com/file/nngejempibp6910/Minecraft_0.2.0.zip/file" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
@@ -546,7 +546,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 0.1.0</h3>
                     <strong class="project-title">
-                        <a href="Minecraft PE 0.1.0 demo.apk" class="more-details">Download</a>
+                        <a href="https://www.mediafire.com/file/z1byb61xc6fe7oy/Minecraft_0.1.0.zip/file" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>            
