--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
      <br>
      <br>
      <br>
+<section class="projects" id="Minecraft">
       <h2 class="title">Minecraft Version</h2>
         <div class="content">
             <div class="project-card">
