--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
      <br>
     <section class="projects" id="Minecraft">
         <h2 class="title">Minecraft Version</h2>
+<div class="content">
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="Minecraft.jpg" />
+                </div>
+                <div class="project-info">
+                    <h3 class="project-category">Minecraft 1.20.62.02</h3>
+                    <strong class="project-title">
+                        <a href="https://www.mediafire.com/file/2kofv9ic53jcjw9/minecraft-1-20-62+Official-By-Gamerboyvizag.apk/file" class="more-details">Pro page transition</a>
+                    </strong>
+                </div>
+            </div>
         <div class="content">
             <div class="project-card">
                 <div class="project-image">
