--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <div class="project-info">
                     <h3 class="project-category">Minecraft 1.15.0.54</h3>
                     <strong class="project-title">
-                        <a href="ttps://m.apkmodhere.com/minecraft/com.mojang.minecraftpe/download?version=1.15.0.54&type=free" class="more-details">Pro page transition</a>
+                        <a href="https://m.apkmodhere.com/minecraft/com.mojang.minecraftpe/download?version=1.15.0.54&type=free" class="more-details">Pro page transition</a>
                     </strong>
                 </div>
             </div>
