--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="icon" href="Minecraft.icon">
     <link rel="stylesheet" href="style.css">
-    <title>Minecraft Version</title>
+    <title>Minecraft All Version</title>
 </head>
 <body>
 	<body bgcolor="#4F02B5">
@@ -16,7 +16,7 @@
         <a href="#" class="logo">Mohamed</a>
         <nav class="navigation">
         	<a href="#projects">About Me</a>
-            <a href="#Minecraft">Minecraft Version</a>
+            <a href="#Minecraft">Minecraft All Version</a>
         </nav>
         <button class="hamburger">
             <div class="bar"></div>
@@ -26,7 +26,7 @@
     </header>
     <nav class="mobile-nav">
         <a href="#projects" class="mobile-navB">About Me</a>
-        <a href="#Minecraft" class="mobile-navB">Minecraft Version</a>
+        <a href="#Minecraft" class="mobile-navB">Minecraft All Version</a>
     </nav>
 
     <section class="main">
@@ -65,7 +65,7 @@
      <br>
      <br>
     <section class="projects" id="Minecraft">
-        <h2 class="title">Minecraft Version</h2>
+        <h2 class="title">Minecraft All Version</h2>
         <div class="content">
             <div class="project-card">
                 <div class="project-image">
