--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="navigation">
         	<a href="#projects">About Me</a>
             <a href="#Minecraft">Minecraft All Version</a>
-            <a href="#English">ARABIC</a>
+            <a href="index1.html">ARABIC</a>
         </nav>
         <button class="hamburger">
             <div class="bar"></div>
