--- a/index1.html
+++ b/index1.html
@@ -15,8 +15,9 @@
     <header>
         <a href="#" class="logo">محمد</a>
         <nav class="navigation">
+        <a href="index.html">انجليزي</a>
         	<a href="#projects">عني</a>
-            <a href="#Minecraft">ماين كرافت جميع اصدارات</a>
+        <a href="#Minecraft">ماين كرافت جميع اصدارات</a>
         </nav>
         <button class="hamburger">
             <div class="bar"></div>
