--- a/index1.html
+++ b/index1.html
@@ -68,6 +68,18 @@
      <br>
     <section class="projects" id="Minecraft">
         <h2 class="title">ماين كرافت جميع اصدارات</h2>
+<div class="content">
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="Minecraft.jpg" />
+                </div>
+                <div class="project-info">
+                    <h3 class="project-category">ماين كرافت 1.20.71.01</h3>
+                    <strong class="project-title">
+                        <a href="https://www.mediafire.com/file/urbmn5rl6d8754d/Minecraft+1.20.71+Orginal.apk/file" class="more-details">Pro page transition</a>
+                    </strong>
+                </div>
+            </div>
         <div class="content">
             <div class="project-card">
                 <div class="project-image">
