--- a/index1.html
+++ b/index1.html
@@ -76,7 +76,7 @@
                 <div class="project-info">
                     <h3 class="project-category">ماين كرافت 1.20.71.01</h3>
                     <strong class="project-title">
-                        <a href="https://www.mediafire.com/file/urbmn5rl6d8754d/Minecraft+1.20.71+Orginal.apk/file" class="more-details">Pro page transition</a>
+                        <a href="https://www.mediafire.com/file/urbmn5rl6d8754d/Minecraft+1.20.71+Orginal.apk/file" class="more-details">انتقال صفحة موالية</a>
                     </strong>
                 </div>
             </div>
