--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <section class="main">
         <div>
-            <h2>Welcome to my<br><span>Minecraft all versions </span></h2>
+            <h2>Welcome to my website <br><span>Minecraft all versions </span></h2>
             <h3>Content creator</h3>
             <a href="#projects2" class="main-btn">who am I?</a>
             <div class="social-icons">
